[package]
name = "puzzleos"
version = "0.1.0"
authors = ["puzzleos Team "Hongrui Zhu <henryzhu@gwu.edu>", "Zhengyu Xie <kizzyxie@gwu.edu>", "Mengqi Wu <mengqiwu@gwu.edu>""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
volatile = "0.3"
virtio-drivers = { path = "../virtio-drivers" }
easy-fs = { path = "../easy-fs" }
virtio-input-decoder = "0.1.4"

[features]
board_qemu = []

[profile.release]
debug = true
